# sn_gram

./: LICENSE  README.md  pyproject.toml
src/sn_gram/: sn_gram.py
tests/: test.py
